# glue

./: .gitignore  CMakeLists.txt
assets/: cube.glb
glue/src/: cube_renderer.cpp  cube_renderer.hpp  limit_fps.hpp  main.cpp  plane_renderer.cpp  plane_renderer.hpp  run.cpp  run.hpp  window.hpp
glue/src/debug/: data_logger.hpp  frame_logger.hpp
glue/src/gfx/: buffers.hpp  shader.cpp  shader.hpp  texture.hpp  uniform_block.hpp  vertex_array.hpp
glue/src/imgui/: grapher.hpp  imgui_context.hpp  option_slider.hpp
glue/src/uniforms/: lighting.hpp  view_projection.hpp
libbitpack/include/glue/bitpack/: bitpack.hpp  concepts.hpp  math.hpp  pack_bits.hpp  pack_fundamental.hpp  pack_quantize.hpp  pack_range.hpp  packer.hpp
libbitpack/tests/bitpack/: test_bitpack.cpp  test_examples.cpp  test_math.cpp  test_pack_bits.cpp  test_pack_quantize.cpp  test_pack_range.cpp  test_packer.cpp
libcommon/include/glue/: assert.hpp  assume.hpp  math.hpp  plane.hpp  pointers.hpp  pose.hpp  presence_window.hpp  radial.hpp  resource.hpp  typedefs.hpp  types.hpp
libcommon/include/glue/collections/: circular_buffer.hpp  circular_buffer_iterator.hpp  fixed_circular_buffer.hpp  fixed_vec.hpp
libcommon/include/glue/debug/: idata_logger.hpp  timer.hpp
libcommon/include/glue/objects/: concepts.hpp  id.hpp
libcommon/src/objects/: id.cpp
libcommon/tests/: test_math.cpp  test_object_id.cpp  test_pointers.cpp  test_presence_window.cpp
libcommon/tests/collections/: test_circular_buffer.cpp  test_fixed_circular_buffer.cpp  test_fixed_vec.cpp
libcommon/tests/objects/: test_object_id.cpp
libgame/include/glue/: camera.hpp  input.hpp  physics.hpp  world.hpp  world_frame.hpp
libgame/include/glue/director/: game_director.hpp  igame_director.hpp  player_director.hpp
libgame/include/glue/physics/: base_physics_engine.hpp  iphysics_engine.hpp  jolt_physics_engine.hpp  physics_engine.hpp
libgame/include/glue/simulator/: fixed_timestep.hpp  isimulator.hpp  predictor_reconciler_simulator.hpp
libgame/src/: physics.cpp
libgame/src/director/: game_director.cpp
libgame/src/physics/: jolt_activation_listener.hpp  jolt_contact_listener.hpp  jolt_factory_singleton_instance.hpp  jolt_glm_compat.hpp  jolt_physics_backend.cpp  jolt_physics_backend.hpp  jolt_physics_engine.cpp  jolt_physics_impl.cpp  jolt_physics_impl.hpp  jolt_setup_globals.cpp  jolt_setup_globals.hpp  layers.cpp  layers.hpp
libgame/tests/physics/: test_jolt_glm_compat.cpp
libgame/tests/simulator/: test_fixed_timestep.cpp  test_predictor_reconciler_simulator.cpp
libnetwork/include/glue/network/: address.hpp  connection.hpp  packet.hpp  socket.hpp
libnetwork/include/glue/network/detail/: socket_handle.inl
libnetwork/src/network/: socket.cpp  unix_socket.cpp
libnetwork/tests/network/: test_address.cpp  test_packet.cpp  test_packet_packing.cpp  test_socket.cpp
